--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: khoanhuynh-evizi/RC360-WDIO 
+          token: ${{ secrets.WDIO_ACCESS_TOKEN }}
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
