--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: Run test when update main
+name: Run test when push to main
 
 on:
   push:
@@ -21,9 +21,11 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn test --suite="Specific Feature Test" --features="Login" --reporter="Allure Reporter"
       - name: Allure Reporter generator
-        uses: actions/checkout@v2
+        uses: simple-elf/allure-report-action@master
         if: always()
-        continue-on-error: true
+        id: allure-report
         with:
-          ref: gh-pages
-          path: gh-pages
+          allure_results: reports
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
