--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,3 +29,10 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
+      - name: Deploy Report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          external_repository: khoanhuynh-evizi/dashboard-demo
+          publish_dir: ./allure-history
+          github_token: ${{ secrets.GITHUB_TOKEN }}
