--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: yarn install --frozen-lockfile
-      - run: yarn test --suite="Specific Feature Test" --features="Login" --reporter="Allure Reporter"
+      - run: yarn test --suite="Regression Test" --features="Login" --reporter="Allure Reporter"
       - name: Allure Reporter generator
         uses: simple-elf/allure-report-action@master
         if: always()
