--- a/.github/workflows/push-branch.yml
+++ b/.github/workflows/push-branch.yml
@@ -39,3 +39,5 @@ jobs:
           external_repository: khoanhuynh-evizi/dashboard-demo
           publish_dir: ./allure-report
           personal_token: ${{ secrets.WDIO_ACCESS_TOKEN }}
+          destination_dir: ${GITHUB_REF##*/}
+
