--- a/.github/workflows/push-branch.yml
+++ b/.github/workflows/push-branch.yml
@@ -39,5 +39,4 @@ jobs:
           external_repository: khoanhuynh-evizi/dashboard-demo
           publish_dir: ./allure-report
           personal_token: ${{ secrets.WDIO_ACCESS_TOKEN }}
-          destination_dir: ${{ GIT_BRANCH }
-
+          destination_dir: ${{ GIT_BRANCH }}
