--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -33,6 +33,10 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
+      - name: Check test run 
+        run: | 
+          echo ${{ steps.tests.outputs.stdout }} > specs-reporter.logs
+          egrep '[0-9]+\sfailed,\s[0-9]+\stotal' specs-reporter.logs > /dev/null
       - name: Deploy Report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
@@ -40,6 +44,3 @@ jobs:
           external_repository: khoanhuynh-evizi/dashboard-demo
           publish_dir: ./allure-report
           personal_token: ${{ secrets.WDIO_ACCESS_TOKEN }}
-      - name: Check test run 
-        run: echo ${{ steps.tests.outputs.stdout }} | egrep '[0-9]+\sfailed,\s[0-9]+\stotal' >/dev/null
-
