--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -33,13 +33,16 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
-      - name: Check test run 
-        run: | 
-          cat > specs-reporter.logs <<EOL
+      - run: | 
+          cat > .allure-report/specs-reporter.logs <<EOL
           ${{ steps.tests.outputs.stdout }}
           EOL
-          FALLED=egrep '[0-9]+\sfailed,\s[0-9]+\stotal' specs-reporter.logs > /dev/null
-          echo $FALLED
+      - run: echo $(egrep '[0-9]+\sfailed,\s[0-9]+\stotal' .allure-report/specs-reporter.log) >> $GITHUB_ENV
+      - name: Test Checker
+        run: |
+          if [ -z "${{ env.GITHUB_BASE_REF }}" ]; then
+            exit 1
+          fi
       - name: Deploy Report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
@@ -47,3 +50,4 @@ jobs:
           external_repository: khoanhuynh-evizi/dashboard-demo
           publish_dir: ./allure-report
           personal_token: ${{ secrets.WDIO_ACCESS_TOKEN }}
+      
