--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: mathiasvr/command-output@v1
         id: tests
         with:
-          run: yarn test --suite="Specific Feature Test" --features="Failed, Passed" --reporter="Spec Reporter" 
+          run: yarn test --suite="Specific Feature Test" --features="Passed" --reporter="Spec Reporter" 
       - name: Allure Reporter generator
         uses: simple-elf/allure-report-action@master
         if: always()
