--- a/.github/workflows/push-branch.yml
+++ b/.github/workflows/push-branch.yml
@@ -15,14 +15,18 @@ jobs:
         with:
           repository: khoanhuynh-evizi/RC360-WDIO 
           token: ${{ secrets.WDIO_ACCESS_TOKEN }}
-
+          ref: demo
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: yarn install --frozen-lockfile
-      - run: yarn test --suite="Specific Feature Test" --features="Login" --reporter="Allure Reporter"
+      - name: Run tests
+        uses: mathiasvr/command-output@v1
+        id: tests
+        with:
+          run: yarn test --suite="Specific Feature Test" --features="Failed" --reporter="Spec Reporter" 
       - name: Allure Reporter generator
         uses: simple-elf/allure-report-action@master
         if: always()
@@ -32,6 +36,15 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
+      - run: | 
+          cat > specs-reporter.log <<EOL
+          ${{ steps.tests.outputs.stdout }}
+          EOL
+      - name: Test Checker
+        run: |
+          if [ !  -z "$(egrep '[0-9]+\sfailed,\s[0-9]+\stotal' specs-reporter.log)" ]; then
+            exit 1
+          fi
       - name: Deploy Report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
@@ -39,4 +52,3 @@ jobs:
           external_repository: khoanhuynh-evizi/dashboard-demo
           publish_dir: ./allure-report
           personal_token: ${{ secrets.WDIO_ACCESS_TOKEN }}
-          destination_dir: ${{ GIT_BRANCH }}
