--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,9 +1,8 @@
-name: Run test when create pull request
+name: Run test when create pull request to main
 
 on:
   pull_request:
     branches: [ main ]
-
     
 jobs:
   run-test:
