--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -1,8 +1,8 @@
 name: Run test when push to main
 
 on:
-  push:
-    branches: [ "main" ]
+#   push:
+#     branches: [ "main" ]
     
 jobs:
   run-test:
