--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -3,7 +3,7 @@ name: Run test when push to main
 on:
 #   push:
 #     branches: [ "main" ]
-    
+    workflow_dispatch
 jobs:
   run-test:
     runs-on: ubuntu-latest
